# SANDPILE_MODEL

./: CMakeLists.txt  labwork_3_Valerochka1337
image/: CMakeLists.txt  image.cpp  image.h
model/: CMakeLists.txt  model.cpp  model.h
parser/: parser.cpp  parser.h
